--- a/src/index.css
+++ b/src/index.css
@@ -194,6 +194,23 @@
     list-style: none;
   }
 
+  /* Override reset for markdown blocks where we want bullets */
+  .markdown-content ul {
+    list-style: disc;
+    padding-left: 1.25rem; /* ~pl-5 */
+    margin-bottom: 0.75rem; /* ~mb-3 */
+  }
+
+  .markdown-content ol {
+    list-style: decimal;
+    padding-left: 1.25rem;
+    margin-bottom: 0.75rem;
+  }
+
+  .markdown-content li {
+    margin-bottom: 0.25rem; /* ~mb-1 */
+  }
+
   img, svg, video, canvas, audio, iframe, embed, object {
     vertical-align: middle;
     display: block;
